--- a/AutisteWatch/AutisteWatch/Base.lproj/LaunchScreen.storyboard
+++ b/AutisteWatch/AutisteWatch/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,31 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bbD-Js-cgz">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="Mk3-Ua-71l">
+                                        <rect key="frame" x="44" y="44" width="512" height="512"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Mk3-Ua-71l" secondAttribute="height" multiplier="1:1" id="EOD-an-I3A"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.28627450980392155" green="0.3411764705882353" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Mk3-Ua-71l" firstAttribute="centerX" secondItem="bbD-Js-cgz" secondAttribute="centerX" id="DCc-Og-qpX"/>
+                                    <constraint firstItem="Mk3-Ua-71l" firstAttribute="centerY" secondItem="bbD-Js-cgz" secondAttribute="centerY" id="HQH-Bl-ZLN"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bbD-Js-cgz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3Eb-Yd-5r7"/>
+                            <constraint firstItem="bbD-Js-cgz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="7SP-P7-q64"/>
+                            <constraint firstItem="bbD-Js-cgz" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="UUQ-2Z-2ob"/>
+                            <constraint firstItem="bbD-Js-cgz" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="iwK-nh-f7H"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +49,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch" width="512" height="512"/>
+    </resources>
 </document>
