--- a/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
+++ b/AutisteWatch/AutisteWatch/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="533" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ht-yw-7WI">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ht-yw-7WI">
                                             <rect key="frame" x="16" y="6" width="517" height="32"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -416,6 +416,9 @@
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="5bM-YQ-fDT" id="64W-K8-BWh"/>
+                                </connections>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="97" sectionHeaderHeight="20" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="pqD-K1-Lpf">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -648,55 +651,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qVp-8L-oZ9">
-                            <size key="itemSize" width="183" height="177"/>
+                            <size key="itemSize" width="186" height="188"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="oneActivity" id="jIC-Ge-ryR">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="100" contentMode="center" reuseIdentifier="oneActivity" id="jIC-Ge-ryR" customClass="ActivityViewCell" customModule="AutisteWatch" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="183" height="177"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="183" height="177"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="186" height="188"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wn-0e-xrV">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="Bed" translatesAutoresizingMaskIntoConstraints="NO" id="1wn-0e-xrV">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLo-bN-Whf">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
+                                    <constraint firstItem="1wn-0e-xrV" firstAttribute="top" secondItem="jIC-Ge-ryR" secondAttribute="topMargin" constant="-8" id="7Ig-wS-J9r"/>
                                     <constraint firstItem="1wn-0e-xrV" firstAttribute="width" secondItem="jIC-Ge-ryR" secondAttribute="width" id="Atu-fV-WJH"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="gLo-bN-Whf" secondAttribute="bottom" constant="-8" id="OIN-BW-E33"/>
                                     <constraint firstItem="1wn-0e-xrV" firstAttribute="centerX" secondItem="jIC-Ge-ryR" secondAttribute="centerX" id="P82-mT-wHA"/>
+                                    <constraint firstItem="gLo-bN-Whf" firstAttribute="centerX" secondItem="jIC-Ge-ryR" secondAttribute="centerX" id="RSf-vy-ABK"/>
+                                    <constraint firstItem="gLo-bN-Whf" firstAttribute="top" secondItem="1wn-0e-xrV" secondAttribute="bottom" constant="3" id="sDY-P0-b9t">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                                    </constraint>
                                     <constraint firstItem="1wn-0e-xrV" firstAttribute="centerY" secondItem="jIC-Ge-ryR" secondAttribute="centerY" id="ucf-KD-Ctw"/>
                                     <constraint firstItem="1wn-0e-xrV" firstAttribute="height" secondItem="jIC-Ge-ryR" secondAttribute="height" id="w9x-u8-07Z"/>
                                 </constraints>
-                                <size key="customSize" width="183" height="177"/>
+                                <size key="customSize" width="186" height="188"/>
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="1wn-0e-xrV"/>
+                                        <exclude reference="gLo-bN-Whf"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <exclude reference="7Ig-wS-J9r"/>
                                         <exclude reference="Atu-fV-WJH"/>
                                         <exclude reference="P82-mT-wHA"/>
                                         <exclude reference="ucf-KD-Ctw"/>
                                         <exclude reference="w9x-u8-07Z"/>
+                                        <exclude reference="OIN-BW-E33"/>
+                                        <exclude reference="RSf-vy-ABK"/>
+                                        <exclude reference="sDY-P0-b9t"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="1wn-0e-xrV"/>
+                                        <include reference="gLo-bN-Whf"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <include reference="7Ig-wS-J9r"/>
                                         <include reference="Atu-fV-WJH"/>
                                         <include reference="P82-mT-wHA"/>
-                                        <include reference="ucf-KD-Ctw"/>
-                                        <include reference="w9x-u8-07Z"/>
+                                        <exclude reference="ucf-KD-Ctw"/>
+                                        <exclude reference="w9x-u8-07Z"/>
+                                        <include reference="OIN-BW-E33"/>
+                                        <include reference="RSf-vy-ABK"/>
+                                        <include reference="sDY-P0-b9t"/>
                                     </mask>
                                 </variation>
                                 <connections>
+                                    <outlet property="imgVw_activityImage" destination="1wn-0e-xrV" id="KI4-T7-cWc"/>
+                                    <outlet property="lbl_activityName" destination="gLo-bN-Whf" id="WlR-O6-Ebo"/>
                                     <segue destination="hIh-Nq-mGx" kind="show" identifier="toEditActivity" id="GKy-Bb-NTL"/>
                                 </connections>
                             </collectionViewCell>
@@ -864,6 +891,7 @@
     </scenes>
     <resources>
         <image name="Activity" width="17" height="17"/>
+        <image name="Bed" width="173" height="173"/>
         <image name="Group" width="17" height="17"/>
         <image name="Patient" width="17" height="17"/>
     </resources>
